--- a/README.Rmd
+++ b/README.Rmd
@@ -11,7 +11,7 @@ output:
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-```{r}
+```{r, output = FALSE}
 ## Libraries
 
 #tidyverse for plotting and vis
