--- a/README.Rmd
+++ b/README.Rmd
@@ -11,7 +11,7 @@ output:
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-```{r, echo = FALSE, message = FALSE, warning = FALSE}
+```{r, echo=TRUE, results='hide', message=FALSE}
 ## Libraries
 
 #tidyverse for plotting and vis
