--- a/README.Rmd
+++ b/README.Rmd
@@ -168,6 +168,9 @@ chisq.test(df$atcg)
 #We reject the null hypothesis and conclude that there is a significant 
 # difference in the frequency of nucleotides in the ABO gene
 
+g_c_content <- (atcg[3] + atcg[4]) / sum(atcg)
+cat("G+C content:", round(g_c_content,4), "\n")
+
 ```
 
 \newpage
